# sea_orm_demo

./: .env  Cargo.toml  copilot_qa.md
migration/src/: lib.rs  m20240607_000001_create_bakery_table.rs  m20240607_105830_create_chef_table.rs
src/: lib.rs  main.rs  test_info.rs
src/entities/: bakery.rs  chef.rs
src/handler/: mod.rs
src/opt/: delete.rs  find.rs  insert.rs  update.rs
src/router/: mod.rs
